--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.3",
-    "next": "14.2.6",
-    "next-auth": "^5.0.0-beta.20",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-spinners-kit": "^1.9.1"
+ "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.6.0",
+    "next": "13.5.6",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "prisma": "^5.6.0",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "13.5.6"
   }
 }
