--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "prompt-x2",
+  "name": "promptx",
   "version": "0.1.0",
-  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
- "dependencies": {
+  "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "node-fetch": "^3.3.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
     "prisma": "^5.6.0",
     "eslint": "^8.52.0",
-    "eslint-config-next": "13.5.6"
+    "eslint-config-next": "13.5.6",
+    "@types/node": "^20.8.7",
+    "typescript": "^5.2.2"
   }
 }
