--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.6.0",
-    "next": "13.5.6",
+    "@prisma/client": "^5.22.0",
+    "next": "^14.0.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.5",
-    "node-fetch": "^3.3.2",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "react-spinners": "^0.13.8",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
-    "prisma": "^5.6.0",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "13.5.6",
-    "@types/node": "^20.8.7",
-    "typescript": "^5.2.2"
+    "prisma": "^5.22.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.0.0",
+    "@types/node": "^20.8.7"
   }
 }
