--- a/package.json
+++ b/package.json
@@ -12,18 +12,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
-    "next": "^14.0.0",
+    "next": "^14.2.6",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.5",
-    "react-spinners": "^0.13.8",
-    "lucide-react": "^0.263.1"
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "prisma": "^5.22.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.0.0",
-    "@types/node": "^20.8.7"
+    "eslint-config-next": "^14.0.0"
   }
 }
